# MediaClipper

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: build-windows.yml
packaging/inno/: installer.iss
packaging/pyinstaller/: mediaclipper.spec
scripts/: download_tools.py
src/mediaclipper/: __init__.py  app.py  main.py
src/mediaclipper/infra/: __init__.py  logger.py  paths.py  process_runner.py  temp_manager.py  tool_locator.py
src/mediaclipper/services/: __init__.py  cleanup_service.py  ffmpeg_service.py  ffprobe_service.py  settings_service.py  ytdlp_service.py
src/mediaclipper/ui/: __init__.py  cutter_panel.py  download_panel.py  home_page.py  main_window.py  settings_dialog.py
src/mediaclipper/workers/: __init__.py  download_worker.py  export_worker.py  metadata_worker.py
tests/: test_cleanup.py  test_output_naming.py  test_paths.py  test_time_parser.py
tools/windows/: README.txt
