[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mediaclipper"
version = "1.0.0"
description = "Desktop app for downloading and cutting video/audio"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "MediaClipper" }
]
keywords = ["video", "audio", "downloader", "ffmpeg", "ytdlp", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Audio",
]
dependencies = [
    "PySide6>=6.5.0",
    "yt-dlp>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mediaclipper = "mediaclipper.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mediaclipper"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
